# Pynotes

./: README.md  main.py  othertests.py  pyproject.toml  requirements.txt  school.json  test2.py  tests.py
