[tool.poetry]
name = "repl_nix_Little-project-for-school"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.27.1"
keyboard = "^0.13.5"
SelectMenu = "^1.0.0-beta.2"
prettytable = "^3.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
